Fix popup line wrapping.

--- a/styles/popup.less
+++ b/styles/popup.less
@@ -5,6 +5,7 @@
       color: white;
       .unit-name {
         text-shadow: @black-glow;
+        white-space: nowrap;
       }
     }
   }
@@ -27,6 +28,7 @@
       margin: 0;
 
       .unit-name {
+        white-space: nowrap;
         font-size: 16px;
         text-shadow: @white-glow;
       }
